--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-gif-loader": "^0.6.0",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
+    "swiper": "^10.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
